Fixing buzzwords section overlapping with about section.

--- a/src/components/AboutSection/About.css
+++ b/src/components/AboutSection/About.css
@@ -108,13 +108,13 @@
     margin-left:1.5rem;
     margin-right:1.5rem;
     margin-bottom: 5rem;
+    height: auto;
     display: block;
   }
 
   .buzzwords{
     margin-left:1.5rem;
     margin-right:1.5rem;
-    display: block;
     height: fit-content;
   }
 
