--- a/src/components/Global.css
+++ b/src/components/Global.css
@@ -98,3 +98,9 @@
   }
 }
 
+@media screen and (max-width: 500px){
+  .circle{
+    display: none;
+  }
+}
+
